src/Main/home/home.css
/*HOME*/

.home {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 8rem;
    width: 100%;
    height: 100vh;
    align-items: center;
    padding-top: 15vh;
    z-index: 2;
}

.home::before {
    display: none;
}

.home-content {
    position: relative;
    animation: fontEnlargment 1.5s ease forwards;
}

.home-content h3 {
    font-size: 3.2rem;
    font-weight: 700;
    animation: fadeInRight 1.5s ease forwards;
}

.home-content h1 {
    position: relative;
    font-size: 5.6rem;
    font-weight: 700;
    line-height: 1.3;
    animation: fadeInLeft 2.5s ease forwards;
}

.home-content p {
    font-size: 1.2rem;
    line-height: 1.5em;
    margin-top: 2rem;
}

.home-img {
    display: flex;
    justify-content: center;
    align-items: center;
}

.home-img img {
    position: relative;
    height: 30vw;
    width: 30vw;
    max-width: 50rem;
    max-height: 50rem;
    opacity: 0;
    z-index: 2;
}

.home-image-shadow {
    position: absolute;
    border-radius: 50%;
    height: 10%;
    width: 10%;
    animation: boxShadowAnimation 2s ease forwards;
    animation-delay: 2.1s;
}

.home-img-animation {
    animation: fadeInLeft 2s ease forwards, floatImage 4s ease-in-out infinite;
    animation-delay: 1s, 3s;
}

.home-img-animation-rtl {
    animation: fadeInLeftRTL 2s ease forwards, floatImage 4s ease-in-out infinite;
    animation-delay: 1s, 3s;
}

.social-media a {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 4rem;
    height: 4rem;
    background: transparent;
    border: .3rem solid var(--main-color);
    border-radius: 50%;
    font-size: 1.85rem;
    color: var(--main-color);
    margin: 3rem 1.5rem 0 0;
    opacity: 0%;
    animation: fadeInLeft 1s ease forwards;
    animation-delay: calc(.1s * var(--i));
    transition: all .3s ease-in-out;
}

.social-media a:hover {
    background: var(--main-color);
    color: var(--second-bg-color);
    box-shadow: 0 0 1rem var(--main-color);
    transform: scale(1.1) !important;
}


.home .btn {
    margin: 0 20% 0 20.5%;
    margin-top: 3em;
    transition: all .2s ease;
    animation: fadeInRight 1.5s ease forwards;
}

/*RESPONSIVE*/



/*768px*/
@media (max-width: 768px) {

    /*HOME*/


    .home {
        flex-direction: column-reverse;
        gap: 10vh;
        margin-top: 5vh;
    }

    .home-content h3 {
        font-size: 2.6rem;
        animation: none;
    }

    .home-content h1 {
        font-size: 5rem;
        animation: none;
    }

    .home-img img {
        width: 50vw;
        height: 50vw;
        margin: 12vh 0 6vh 0;
        opacity: 1;
        animation: boxShadowAnimationMobile 2s ease forwards;
        animation-delay: 1s, 2s;
    }

    .home-content p {
        font-size: 1.4rem;
        animation: none;
        margin: 2rem 5% 0 5%;
        width: 90%;
    }

    .social-media a {
        opacity: 1;
        animation: none;
    }

    .home .btn {
        animation: none;
    }

    /*ANIMATION 768px*/

    @keyframes boxShadowAnimationMobile {
        0% {
            box-shadow: 0 0 0 0 transparent;
        }

        100% {
            box-shadow: 0 0 5rem 2rem var(--main-color);
        }
    }
}

@media (max-width: 650px) {
    .home-img img {
        width: 75vw;
        height: 75vw;
    }
}

